--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".ReportDetailActivity"/>
+        <activity android:name=".ReportActivity" />
+        <activity android:name=".EditProfileActivity" />
         <activity
             android:name=".ViewRequestActivity"
             android:screenOrientation="portrait"
